// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ChoiceField with a radio 1`] = `
<div
  className="radio"
>
  <div
    className="focus-container"
  >
    <label
      className="label healtheintent-label-text"
    >
      <input
        className="native-input healtheintent-application"
        disabled={false}
        name="children_present"
        onBlur={[Function]}
        onFocus={[Function]}
        type="radio"
        value="children_present"
      />
      <span
        className="label-text"
      >
        Do you have any Children?
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a controlled radio 1`] = `
<div
  className="radio"
>
  <div
    className="focus-container"
  >
    <label
      className="label"
    >
      <input
        checked={true}
        className="native-input"
        disabled={false}
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <span
        className="label-text"
      >
        Radio
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a disabled radio 1`] = `
<div
  className="radio"
>
  <div
    className="focus-container"
  >
    <label
      className="label is-disabled"
    >
      <input
        checked={true}
        className="native-input"
        disabled={true}
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <span
        className="label-text"
      >
        Radio
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a radio 1`] = `
<div
  className="radio"
>
  <div
    className="focus-container"
  >
    <label
      className="label"
    >
      <input
        className="native-input"
        disabled={false}
        name={null}
        onBlur={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <span
        className="label-text"
      >
        Radio
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a radio with a hidden label 1`] = `
<div
  className="radio"
>
  <div
    className="is-hidden-focus-container"
  >
    <label
      className="label"
    >
      <input
        aria-label="Radio"
        checked={true}
        className="native-input"
        disabled={false}
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <span
        className="label-text is-hidden"
      />
    </label>
  </div>
</div>
`;

exports[`should render an uncontrolled radio 1`] = `
<div
  className="radio"
>
  <div
    className="focus-container"
  >
    <label
      className="label"
    >
      <input
        className="native-input"
        defaultChecked={true}
        disabled={false}
        name={null}
        onBlur={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <span
        className="label-text"
      >
        Radio
      </span>
    </label>
  </div>
</div>
`;
